    using a similar seed of the R random number generator,
    \item argument\code{n.MCruns} no allows an option \code{'auto'}. Using this mode the error
    estimation is continued until a stable error is reached,
    \item added argument \code{txtProgressBar},
    \item output table enhanced by input options and values resulting from the new arguments.

   }


  \item \code{fit_CWCurve()}

  \itemize{
    \item 'component.contribution.matrix' is now returned as list, as otherwise the merging
    of the objects will break.

   }

  \item \code{fit_LMCurve()}

  \itemize{
    \item 'component.contribution.matrix' is now returned as list, as otherwise the merging
    of the objects will break.

   }

   \item \code{plot_GrowthCurve()}

  \itemize{
    \item Function crashed with unclear error if the number of regenerations points was <=3), fixed,
    \item fitting is now allowed with at leat two regenerations points.

   }

   \item \code{plot_AbanicoPlot()}

  \itemize{
      \item Argument \code{na.exclude} changed to \code{na.rm},
      \item add sample group specific colours for rugs,
      \item summary and legend placement bugs for rotated abanico plot fixed,
      \item labelling errors fixed,
      \item argument \code{frame} added to abanico plot,
      \item adjustment of colours for polygon and bar in abanico plot,
      \item summary keyword list extended and corrected.


   }

  \item \code{plot_Histogram()}

  \itemize{
      \item Argument \code{na.exclude} changed to \code{na.rm},
      \item summary keyword list extended and corrected.

   }

    \item \code{plot_KDE()}

  \itemize{
      \item Argument \code{na.exclude} changed to \code{na.rm},
      \item argument weights removed,
      \item summary keyword list extended and corrected.

   }

       \item \code{plot_RadialPlot()}

  \itemize{
      \item Argument \code{na.exclude} changed to \code{na.rm},
      \item summary keyword list extended and corrected.

   }


