@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Wed May 13 00:28:49 2015
+% Thu May 14 15:55:13 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -47,7 +47,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   21 & calc\_SourceDoseRate & Calculation of the source dose rate via the date of measurement & $<$br /$>$ Calculating the dose rate of the irradiation source via the date of$<$br /$>$ measurement based on: source calibration date, source dose rate, dose rate$<$br /$>$ error. The function returns a data.frame that provides the input argument$<$br /$>$ dose\_rate for the function  Second2Gray .$<$br /$>$ & 0.1 & 2015-04-30 & 11:54:25
  & $<$br /$>$ Margret C. Fuchs, AWI Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  22 & calc\_Statistics & Function to calculate statistic measures & $<$br /$>$ This function calculates a number of descriptive statistics for De-data,$<$br /$>$ most fundamentally using error-weighted approaches.$<$br /$>$ & 0.1.1 & 2015-04-30 & 11:54:40
+  22 & calc\_Statistics & Function to calculate statistic measures & $<$br /$>$ This function calculates a number of descriptive statistics for De-data,$<$br /$>$ most fundamentally using error-weighted approaches.$<$br /$>$ & 0.1.2 & 2015-05-13 & 11:32:06
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   23 & calc\_TLLxTxRatio & Calculate the Lx/Tx ratio for a given set of TL curves [beta version] & $<$br /$>$ Calculate Lx/Tx ratio for a given set of TL curves.$<$br /$>$ & 0.3 & 2015-04-30 & 11:54:57
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Christoph Schmidt, University of Bayreuth (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -86,7 +86,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   45 & merge\_RLum & General merge function for RLum S4 class objects & $<$br /$>$ Function calls object-specific merge functions for RLum S4 class objects.$<$br /$>$ & 0.1 & 2015-04-30 & 11:58:21
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  46 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.2 & 2015-05-13 & 00:20:44
+  46 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.2 & 2015-05-14 & 15:51:50
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
   47 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.6 & 2015-04-30 & 11:58:53
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
