@@ -459,11 +459,11 @@
 </td>
 <td class=cellinside><br /> This function calculates a number of descriptive statistics for De-data,<br /> most fundamentally using error-weighted approaches.<br />
 </td>
-<td class=cellinside>0.1.1
+<td class=cellinside>0.1.2
 </td>
-<td class=cellinside>2015-04-30
+<td class=cellinside>2015-05-13
 </td>
-<td class=cellinside>11:54:40
+<td class=cellinside>11:32:06
 
 </td>
 <td class=cellinside><br /> Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -908,9 +908,9 @@
 </td>
 <td class=cellinside>0.1.2
 </td>
-<td class=cellinside>2015-05-13
+<td class=cellinside>2015-05-14
 </td>
-<td class=cellinside>00:20:44
+<td class=cellinside>15:51:50
 
 </td>
 <td class=cellinside><br /> Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,<br /> IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot<br /> introduced by Galbraith & Green (1990)<br />  R Luminescence Package Team
